# Build_MCP_Server

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  OPTIMIZATION_SUMMARY.md  QUICKSTART.md  README.md  VERIFICATION_REPORT.md  pyproject.toml  requirements-dev.txt  requirements.txt
docs/: API.md  EXAMPLES.md  README.md
src/playwright_mcp_server/: __init__.py  main.py  server.py  tools.py
tests/: conftest.py  test_server.py  test_tools.py
